# SpaceshipFighter

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: Game.cpp  Game.h  Object.h  Scene.cpp  Scene.h  SceneEnd.cpp  SceneEnd.h  SceneMain.cpp  SceneMain.h  SceneTitle.cpp  SceneTitle.h  main.cpp
